--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="nav">
 
         </div>
-        <div class="col">
+        <div class="col-1">
             <div class="sidebar">
                 <ul class="side-bar">
                     <li class="side-bar-item active"><i class="bi bi-house-door-fill"></i><a href="">Home</a></li>
@@ -45,7 +45,7 @@
                 </ul>
             </div>
         </div>
-        <div class="col">
+        <div class="col-2">
             <div class="content">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita fugiat perspiciatis commodi ut
                     illum
