include js file"

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 </select>
                             </div>
                             <div class="d-md-flex justify-content-md-center">
-                                <button type="submit" class="btn btn-primary">Login</button>
+                                <button type="button" id="login" onclick="window.location.href='admin/'" class="btn btn-primary">Login</button>
                             </div>
                         </form>
                     </div>
