--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
                             </div>
                             <div class="mb-3">
                                 <label for="exampleInputPassword1" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1">
+                                <input type="password" class="form-control" id="password">
                             </div>
                             <div class="mb-3 form-check-reverse">
-                                <input class="form-check-input" type="checkbox" value="1" id="flexCheckDefault">
-                                <label class="form-check-label" for="flexCheckDefault">
+                                <input class="form-check-input" type="checkbox" value="" id="showpassword"
+                                    >
+                                <label class="form-check-label" for="showpassword">
                                     Show Password
                                 </label>
                             </div>
@@ -100,10 +101,15 @@
                                 <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
                             </div>
                             <div class="mb-3">
-                                <label for="exampleInputPassword1" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1">
+                                <label for="password" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="password1">
                             </div>
-
+                            <div class="mb-3 form-check-reverse">
+                                <input class="form-check-input" type="checkbox" value="" id="showpassword1">
+                                <label class="form-check-label" for="showpassword1">
+                                    Show Password
+                                </label>
+                            </div>
                             <div class="d-md-flex justify-content-md-center">
                                 <a href="config/connection.php"><button type="submit"
                                         class="btn btn-primary">Register</button></a>
@@ -138,7 +144,7 @@
             <br>
         </div>
         <div class="card-header" style="text-align: center;">
-            Copyright &#169; All rights reserved | This Site Made By "Team-404 Solutioun"
+            Copyright &#169; All rights reserved | This Site Made By "Team-404 Solutioun (Protik Sarkar)"
         </div>
         <div>
 
