--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
                                 <input type="password" class="form-control" id="password">
                             </div>
                             <div class="mb-3 form-check-reverse">
-                                <input class="form-check-input" type="checkbox" value="" id="showpassword"
-                                    >
+                                <input class="form-check-input" type="checkbox" value="" id="showpassword">
                                 <label class="form-check-label" for="showpassword">
                                     Show Password
                                 </label>
@@ -126,38 +125,42 @@
         </div>
     </div>
 
-    <div class="card" style="background-color: #C6CCD2;">
-        <div class="card-body" style="text-align: center;">
-            <h5 class="card-title">Online Course Advisoy System</h5>
-            <!-- <p class="card-text">With supporting text below as a natural lead-in to additional content.</p> -->
-            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-            <br>
-            <a href="http://"><i class="bi bi-instagram" target="_blank" rel="noopener noreferrer"></i></a>&nbsp;&nbsp;
-            <a href="https://github.com/badmansp420" target="_blank" rel="noopener noreferrer"><i
-                    class="bi bi-github"></i></a>&nbsp;&nbsp;
-            <a href="https://www.linkedin.com/in/protik-sarkar-355b991a3/" target="_blank" rel="noopener noreferrer"><i
-                    class="fbi bi-linkedin"></i></a>&nbsp;&nbsp;
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fbi bi-facebook"></i></a>&nbsp;&nbsp;
-            <a href="https://twitter.com/ProtikS61977565" target="_blank" rel="noopener noreferrer"><i
-                    class="bi bi-twitter"></i></a>&nbsp;&nbsp;
+    <footer>
+        <div class="card" style="background-color: #C6CCD2;">
+            <div class="card-body" style="text-align: center;">
+                <h5 class="card-title">Online Course Advisoy System</h5>
+                <!-- <p class="card-text">With supporting text below as a natural lead-in to additional content.</p> -->
+                <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                <br>
+                <a href="http://"><i class="bi bi-instagram" target="_blank"
+                        rel="noopener noreferrer"></i></a>&nbsp;&nbsp;
+                <a href="https://github.com/badmansp420" target="_blank" rel="noopener noreferrer"><i
+                        class="bi bi-github"></i></a>&nbsp;&nbsp;
+                <a href="https://www.linkedin.com/in/protik-sarkar-355b991a3/" target="_blank"
+                    rel="noopener noreferrer"><i class="fbi bi-linkedin"></i></a>&nbsp;&nbsp;
+                <a href="http://" target="_blank" rel="noopener noreferrer"><i
+                        class="fbi bi-facebook"></i></a>&nbsp;&nbsp;
+                <a href="https://twitter.com/ProtikS61977565" target="_blank" rel="noopener noreferrer"><i
+                        class="bi bi-twitter"></i></a>&nbsp;&nbsp;
 
-            <br>
+                <br>
+            </div>
+            <div class="card-header" style="text-align: center;">
+                Copyright &#169; All rights reserved | This Site Made By "Team-404 Solutioun (Protik Sarkar)"
+            </div>
         </div>
-        <div class="card-header" style="text-align: center;">
-            Copyright &#169; All rights reserved | This Site Made By "Team-404 Solutioun (Protik Sarkar)"
-        </div>
-        <div>
+    </footer>
 
-            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-                integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-                crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-                integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-                crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-                crossorigin="anonymous"></script>
-            <script src="assets/js/component.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    <script src="assets/js/component.js"></script>
 </body>
 
 </html>
