Added loding animation

--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
 
 <body onload="windowLoad()">
     <div class="loader" id="loader">
-
-        <img src="assets/images/loading.gif" alt="loading"
-            style="display: block; margin-left: auto; margin-right: auto; margin-top: 15%; height: 8vw;">
+        <img src="assets/images/loading.gif" alt="loading" style="display: block;position: absolute; top: 50%;
+        left: 50%; transform: translate(-50%,-50%);">
         <!-- <label for="loading" style="text-align: center;">Loading...</label> -->
     </div>
 
